[gd_scene load_steps=2 format=3 uid="uid://bqkq0s8nx7rl3"]

[ext_resource type="Script" path="res://scripts/ui/MultiplayerMenu.gd" id="1_x5j2k"]

[node name="MultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_x5j2k")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "MULTIPLAYER"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Server"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Server"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="AddressInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Server Address (127.0.0.1)"

[node name="PortInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Port (7777)"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to Main Menu"

[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]